--- a/00_login/login.html
+++ b/00_login/login.html
@@ -43,7 +43,7 @@
 			<div class="title_area">
 				<h1>개인 정보 정책</h1>
 			</div>
-			<button onclick="popClose()" class="btn_pop_close">닫기</button>
+			<button onclick="popClose()" class="btn_pop_close">Close</button>
 			<div class="policy_wrap">
 				<p>text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text ext text text text text text text text text text text text text text text text text text text text text text text text text text text xt xt text text text text text text text text text t text text text text text text text text text text text text text text text text text text</p>
 			</div>
