--- a/02_info/info.html
+++ b/02_info/info.html
@@ -72,17 +72,17 @@
 			<!-- info_sns_wrap end -->
 		</section>
 		<!-- info_floor_sec start -->
-		<section class="info_floor_sec">
+		<section class="info_floor_sec pd_bottom">
 			<div class="info_floor_title gap">
 				<h3>층별 안내</h3>
 				<img src="../image/common/btn_info.svg" class="ml4" alt="infomation">
 			</div>
 			<!-- floor g -->
 			<div class="floor_g floor">
-				<h4>[G] Hello, LG</h4>
+				<h4 class="gap">[G] Hello, LG</h4>
 				<div class="floor_g_slide floor_slide">
 					<div class="slide">
-						<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"><a href="">LINK</a></figure>
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"><a href="#" id="link_gf_01" class="slide_link">LINK</a></figure>
 						<div class="slide_cont">
 							<h5>Dong Dong x LG</h5>
 							<h6>Good Friend #1</h6>
@@ -90,7 +90,15 @@
 						</div>
 					</div>
 					<div class="slide">
-						<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"><a href="">LINK</a></figure>
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"><a href="#" id="link_gf_02" class="slide_link">LINK</a></figure>
+						<div class="slide_cont">
+							<h5>Dong Dong x LG</h5>
+							<h6>Good Friend #1</h6>
+							<p>Get ready for our collaboration with Dong Dong, bringing you fun, sustainable, and unique fashion accessories. Visit the Brand Zone to find out more.</p>
+						</div>
+					</div>
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"><a href="#" id="link_gf_03" class="slide_link">LINK</a></figure>
 						<div class="slide_cont">
 							<h5>Dong Dong x LG</h5>
 							<h6>Good Friend #1</h6>
@@ -99,52 +107,225 @@
 					</div>
 				</div>
 			</div>
-
+			<!-- floor 1 -->
+			<div class="floor_1 floor">
+				<h4 class="gap">[1F] The Friend for Good life</h4>
+				<div class="floor_1_slide floor_slide">
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_1f_01.png');"></figure>
+						<div class="slide_cont">
+							<h5>Objet Collection</h5>
+							<h6>Good Life Curation</h6>
+							<p>THE COFFEE HOUSE enriches human connection via a cup of coffee. Life can become better and more beautiful, starting with healthier beverages. <br />
+								We are grateful to everyone who came to make Better Choices with LG</p>
+						</div>
+					</div>
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_1f_01.png');"></figure>
+						<div class="slide_cont">
+							<h5>Objet Collection</h5>
+							<h6>Good Life Curation</h6>
+							<p>THE COFFEE HOUSE enriches human connection via a cup of coffee. Life can become better and more beautiful, starting with healthier beverages. </p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- floor 3 -->
+			<div class="floor_3 floor">
+				<h4 class="gap">[3F] The Solution of Good Life</h4>
+				<div class="floor_3_slide floor_slide">
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_3f_01.png');"></figure>
+						<div class="slide_cont">
+							<h5>Good Life Solution</h5>
+							<p>작고 귀여운 가전제품 미니어쳐들과 함께 전문적인 제품상담도 받아보고, 바우쳐도 받아보세요.</p>
+						</div>
+					</div>
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_3f_01.png');"></figure>
+						<div class="slide_cont">
+							<h5>Good Life Solution</h5>
+							<p>작고 귀여운 가전제품 미니어쳐들과 함께 전문적인 제품상담도 받아보고, 바우쳐도 받아보세요.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- floor 5 -->
+			<div class="floor_5 floor">
+				<h4 class="gap">[5F] The Joy of Good Life</h4>
+				<div class="floor_5_slide floor_slide">
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_5f_01.png');"></figure>
+						<div class="slide_cont">
+							<h5>MoodUP Stage</h5>
+							<p>터치 한번만으로 화려한 색감과 신나는 음악으로 분위기를 만들어주는 무드업 냉장고와 함께 댄스챌린지와 포토 인증샷도 남겨보세요.</p>
+						</div>
+					</div>
+					<div class="slide">
+						<figure class="slide_img" style="background-image: url('../image/common/img_info_5f_01.png');"></figure>
+						<div class="slide_cont">
+							<h5>MoodUP Stage</h5>
+							<p>터치 한번만으로 화려한 색감과 신나는 음악으로 분위기를 만들어주는 무드업 냉장고와 함께 댄스챌린지와 포토 인증샷도 남겨보세요.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- floor end -->
 		</section>
 		<!-- info_floor_sec end -->
 
 	</div>
 	
 	<ul class="bottom_gnb">
-		<li><a href=""><span class="bottom_icn"></span><span class="bottom_menutxt">Space Info</span></a></li>
-		<li><a href=""><span class="bottom_icn"></span><span class="bottom_menutxt">Mission</span></a></li>
-		<li><a href=""><span class="bottom_icn"></span><span class="bottom_menutxt">Event</span></a></li>
+		<li><a href="../02_info/info.html" class="active"><span class="bottom_icn1 bottom_icn"></span><span class="bottom_menutxt">Space Info</span></a></li>
+		<li><a href=""><span class="bottom_icn2 bottom_icn"></span><span class="bottom_menutxt">Mission</span></a></li>
+		<li><a href=""><span class="bottom_icn3 bottom_icn"></span><span class="bottom_menutxt">Event</span></a></li>
 	</ul>
 
 	<!-- popup start -->
-	<div id="" class="popup_wrap survey_pop">
-		<!--  -->
-		<div class="pop_content gap">
-			<div class="title_area">
-				<h1>관심사 선택하고 <br />
-					체험 공간 추천 받기</h1>
+	<div id="" class="popup_wrap survey_pop" style="display: flex;">
+		<div class="pop_content">
+			<div class="survey_01 pop_h100 gap">
+				<div class="title_area">
+					<h1>관심사 선택하고 <br />
+						체험 공간 추천 받기</h1>
+				</div>
+				<div class="survey_radios">
+					<label for="survey_radio_1" class="survey_radio">
+						<input type="radio" name="survey_radio_name" id="survey_radio_1">
+						<span class="survey_radio_txt">환경과 지속가능한 삶</span>
+					</label>
+					<label for="survey_radio_2" class="survey_radio">
+						<input type="radio" name="survey_radio_name" id="survey_radio_2">
+						<span class="survey_radio_txt">조화로운 컬러와 공간 인테리어</span>
+					</label>
+					<label for="survey_radio_3" class="survey_radio">
+						<input type="radio" name="survey_radio_name" id="survey_radio_3">
+						<span class="survey_radio_txt">더욱 실감나는 게이밍과 IT기기</span>
+					</label>
+					<label for="survey_radio_4" class="survey_radio">
+						<input type="radio" name="survey_radio_name" id="survey_radio_4">
+						<span class="survey_radio_txt">차별화된 혁신 가전제품 상담</span>
+					</label>
+					<label for="survey_radio_5" class="survey_radio">
+						<input type="radio" name="survey_radio_name" id="survey_radio_5">
+						<span class="survey_radio_txt">화려한 색감과 신나는 음악</span>
+					</label>
+				</div>
+				<div class="pop_bottom_btns">
+					<button onclick="javascript:$('.survey_01').fadeOut('.survey_01');$('.survey_02').fadeIn();" id="btn_survey_check" class="chk_circle btn_pop_circle">다음 단계로</button>
+				</div>
 			</div>
-			<button onclick="popClose()" class="btn_pop_close">닫기</button>
-			
+			<div class="survey_02 pop_h100 gap" style="display: none;">
+				<div class="title_area">
+					<h1>게이밍과 IT기기에 관심많은 <br />
+						테키한 당신을 위한 공간</h1>
+				</div>
+				<div class="survey_result_floor">
+					<div class="">
+						<div class="slide">
+							<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"></figure>
+							<div class="slide_cont">
+								<h5>VNG Games x LG</h5>
+								<h6>Good Life Curation</h6>
+								<p>THE COFFEE HOUSE enriches human connection via a cup of coffee. Life can become better and more beautiful, starting with healthier beverages. <br />
+									We are grateful to everyone who came to make Better Choices with LG</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<button class="btn_back">Back</button>
+			</div>
+			<button onclick="popClose()" class="btn_pop_close">Close</button>
 		</div>
 	</div>
 	<!-- popup end -->
 	<script>
-		// 층별안내 슬라이더
-		$(document).ready(function(){
-			$('.floor_g_slide').slick({
+		function initializeAndAdjustSlider(sliderSelector) {
+		  	// 슬라이더 초기화
+			var $slider = $(sliderSelector).slick({
 				infinite: false,
 				slidesToShow: 1,
 				slidesToScroll: 1,
-				dots: false,
+				dots: true,
 				arrows: false,
 				fade: false,
 				centerMode: true,
-				variableWidth: true,
-				arrows: false,
-				dots: true,
-				customPaging: function(slider, i) {
-					var width = 100 / slider.slideCount;
-					return '<span style="width: ' + width + '%"></span>';
-				}
+				variableWidth: true
 			});
-			
+
+			// 도트 너비 조정 함수
+			function adjustDotsWidth() {
+				var sliderWidth = $slider.width(); // 슬라이더의 전체 너비
+				var dotCount = $slider.slick('getSlick').slideCount; // 슬라이더의 총 아이템 수
+				var dotWidth = sliderWidth / dotCount; // 각 도트의 너비 계산
+				$slider.find('.slick-dots li').css('width', dotWidth); // 너비 적용
+			}
+
+			function adjustSlidesHeight() {
+				var maxHeight = 0;
+				// 모든 슬라이드를 순회하며 최대 높이를 찾습니다.
+				$slider.find('.slick-slide').each(function() {
+				var slideHeight = $(this).outerHeight();
+					if (slideHeight > maxHeight) {
+						maxHeight = slideHeight;
+					}
+				});
+				// 모든 슬라이드에 최대 높이를 적용합니다.
+				$slider.find('.slick-list .slick-slide .slide').height(maxHeight);
+			}
+
+			// 슬라이더 이벤트 핸들러 설정
+			$slider.on('init reInit afterChange', function(event, slick) {
+				adjustDotsWidth(); // 슬라이더 변화 시 도트 너비 조정
+				adjustSlidesHeight(); // 슬라이더 초기화 시 높이 조정
+			});
+
+		  	// 슬라이더가 변화한 후에 높이 조정
+			$slider.on('setPosition', function() {
+				adjustSlidesHeight();
+			});
+			// 윈도우 리사이즈 이벤트 핸들러 설정
+			$(window).resize(function() {
+				adjustSlidesHeight();
+				adjustDotsWidth();
+			});
+		
+		  // 초기 도트 너비 조정
+			adjustDotsWidth();
+		}
+
+		// 사용 예:
+		$(document).ready(function() {
+			initializeAndAdjustSlider('.floor_g_slide'); // 함수 호출로 슬라이더 초기화 및 도트 너비 		조정
+			initializeAndAdjustSlider('.floor_1_slide');
+			initializeAndAdjustSlider('.floor_3_slide');
+			initializeAndAdjustSlider('.floor_5_slide');
 		});
+
+
+		function updateButtonStatus(radio_name) {
+		// 라디오 버튼들을 가져옵니다.
+		var radios = document.getElementsByName(radio_name);
+		// 'active' 클래스를 토글할 버튼을 가져옵니다.
+		var button = document.getElementById('btn_survey_check');
+		// 라디오 버튼들 중 하나라도 체크되었는지 확인합니다.
+		var isChecked = Array.from(radios).some(radio => radio.checked);
+		// 조건에 따라 'active' 클래스를 버튼에 추가하거나 제거합니다.
+		if (isChecked) {
+			button.classList.add('active');
+		} else {
+			button.classList.remove('active');
+		}
+}
+
+// 각 라디오 버튼에 이벤트 리스너를 추가합니다.
+var radios = document.getElementsByName('survey_radio_name');
+Array.from(radios).forEach(function(radio) {
+  radio.addEventListener('change', function() {
+    updateButtonStatus('survey_radio_name');
+  });
+});
 	</script>
 </body>
 </html>
