개발사 1차 전달

--- a/02_info/info.html
+++ b/02_info/info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/utility.css">
@@ -25,7 +25,7 @@
 				<li><a href="javascript:void(0);">Vietnam</a></li>
 			</ul>
 		</header>
-		<div class="info_top_img"><img src="../image/02_info/img_infotop@2x.png" alt="about this"></div>
+		<div class="info_top_img"><img src="../image/02_info/img_infotop.png" alt="about this"></div>
 		<section class="info_section gap">
 			<!-- info_top_wrap start -->
 			<div class="info_top_wrap">
@@ -75,12 +75,13 @@
 		<section class="info_floor_sec pd_bottom">
 			<div class="info_floor_title gap">
 				<h3>층별 안내</h3>
-				<img src="../image/common/btn_info.svg" class="ml4" alt="infomation">
 			</div>
 			<!-- floor g -->
 			<div class="floor_g floor">
 				<h4 class="gap">[GF] Hello, LG</h4>
 				<div class="floor_g_slide floor_slide">
+					<!-- 내용은 추후 수정예정, 관리자에서 입력시 내용이 변경되는 기능 구현 필요합니다.
+					슬라이드 갯수에 따라 하단 바 길이가 늘어나는 스크립트는 아래 구현했습니다. -->
 					<div class="slide">
 						<figure class="slide_img" style="background-image: url('../image/common/img_info_gf_01.png');"><a href="#" id="link_gf_01" class="slide_link">LINK</a></figure>
 						<div class="slide_cont">
