--- a/03_mission/03/worldcup.html
+++ b/03_mission/03/worldcup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../../css/common.css">
 	<link rel="stylesheet" href="../../css/utility.css">
@@ -33,6 +33,9 @@
 				<p>어떤 가전이 나의 취향인지 선택해주세요.</p>
 			</div>
 			<div class="worldcup_list">
+				<!-- 월드컵 기능 간략 설명
+				18강->2번 후 16강으로 이동 -> 8강 -> 4강 -> 결승 -> 완료 팝업 노출.
+				각 월드컵 제품은 랜덤 노출 됩니다. -->
 				<button onclick="" class="worldcup_item active_toggle">
 					<span class="img_wrap"><img src="../../image/03_mission/img_worldcup_01.png" alt="LG Styler image"></span>
 					<span class="txt_wrap">
