--- a/03_mission/05/about.html
+++ b/03_mission/05/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../../css/common.css">
 	<link rel="stylesheet" href="../../css/utility.css">
@@ -36,7 +36,7 @@
 			<div class="m05_wrap">
 				<a href=""><img src="../../image/03_mission/m05_tictok.png" alt="틱톡 챌린지 상세 보기"></a>
 				<div class="m05_hashtag">
-					<p><b>#Another_Life</b><b>#Another_sigon</b><b>#LG</b></p>
+					<p><b>#AnotherLife</b><b>#Anothersigon</b><b>#LG</b><b>#AnotherSaigonChallenge</b></p>
 					<button onclick="popupToastOpen()" id="m05_tictok">해시태그 복사하기</button>
 				</div>
 				<p class="m05_minitxt">Tip. 해시태그를 틱톡에서 검색해보세요!</p>
@@ -90,7 +90,7 @@
 			<div class="m05_wrap">
 				<a href=""><img src="../../image/03_mission/m05_facebook.png" alt="페이스북 챌린지 상세 보기"></a>
 				<div class="m05_hashtag">
-					<p><b>#Another_Life</b><b>#Another_sigon</b><b>#LG</b></p>
+					<p><b>#AnotherLife</b><b>#Anothersigon</b><b>#LG</b><b>#AnotherSaigonSelfie</b></p>
 					<button onclick="popupToastOpen()" id="m05_tictok">해시태그 복사하기</button>
 				</div>
 				<div class="about_howto">
@@ -139,7 +139,7 @@
 				</div>
 			</div>
 			<!-- m05_wrap end -->
-			<button id="m05_password_btn" class="line_link" onclick="">운영 스텝 체크</button>
+			<button id="m05_password_btn" class="line_link" onclick="location.href='./password.html'">운영 스텝 체크</button>
 		</section>
 		<div id="popupToast1" class="popupToast_wrap">
 			<div class="popupToast">
