--- a/03_mission/board_list_04.html
+++ b/03_mission/board_list_04.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/utility.css">
@@ -100,7 +100,7 @@
 			</div>
 			<!-- 미션 및 서베이까지 다 하면 생기는 버튼입니다. -->
 			<div class="link_wrap">
-				<button id="link_m_password" class="line_link" onclick="location.href='./05/password.html'">운영 스텝 체크</button>
+				<button id="link_m_password" class="line_link" onclick="location.href='../05_survey/password.html'">운영 스텝 체크</button>
 			</div>
 			<div class="m_banner_slide">
 				<div class="slide">
