--- a/05_survey/survey01.html
+++ b/05_survey/survey01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/utility.css">
@@ -187,7 +187,7 @@
 				</div>
 				<!-- question end -->
 				<div class="survey_bottom_btns">
-					<!-- 모든 필수문항이 선택시 button에 active 클래스가 추가되면서 다음 화면으로 링크 활성화 됩니다. -->
+					<!-- 모든 필수문항이 선택시 button에 active 클래스가 추가되면서 다음 화면으로 링크 활성화 됩니다. 구현 부탁드립니다. -->
 					<button type="button" onclick="location.href='./survey02.html'" id="btn_survey01_check" class="btn_next btn_pop_circle">다음 단계로</button>
 				</div>
 			</form>
