--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 		<div class="img_wrap"><img src="./image/01_login/img_main.png" alt="Another Saigon by LG"></div>
 		<h1 class="t_center" style="font-style: 20px;">퍼블리싱 파일 목록</h1>
 		<ul class="t_center mt20">
-			<li><a class="t_center" href="./01_login/login.html">로그인</a></li>
+			<li><a class="t_center" href="./01_login/login.html">로그인 1안</a>, <a class="t_center" href="./01_login/login_bg02.html">로그인 2안</a>, <a class="t_center" href="./01_login/login_bg03.html">로그인 3안</a></li>
 			<li><a class="t_center" href="./02_info/info.html">관심사선택, 어나더사이공 소개</a></li>
-			<li><a class="t_center" href="./03_mission/board_list_03.html">미션 (서베이필요)</a></li>
-			<li><a class="t_center" href="./03_mission/board_list_04.html">미션 전부 완성했을때 </a></li>
+			<li><a class="t_center" href="./03_mission/board_list_03.html">미션 미진행</a>, <a class="t_center" href="./03_mission/board_list_03.html">미션 (서베이필요)</a>, <a class="t_center" href="./03_mission/board_list_04.html">미션 전부 완성했을때</a></li>
+			<li><a class="t_center" href="./03_mission/02/scan02.html">2번째 미션 결과값 패널 결과 팝업</a></li>
+			<li><a class="t_center" href="./03_mission/03/worldcup02.html">3번째 미션 결과값 월드컵 결과 팝업</a></li>
 			<li><a class="t_center" href="./05_survey/about.html">서베이</a></li>
 		</ul>
 	</div>
