--- a/01_login/login_bg02.html
+++ b/01_login/login_bg02.html
@@ -1,8 +1,9 @@
+<!-- 디자인별로 다른 로그인 페이지입니다. 3개의 키비가 랜덤으로 노출됩니다. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/utility.css">
@@ -11,7 +12,7 @@
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/script.js"></script>
 </head>
-<body class="login_a_page">
+<body class="login_b_page bg02">
 	<div class="container">
 		<header class="blank_bg">
 			<ul class="language">
@@ -21,17 +22,22 @@
 		</header>
 		<div class="top_title">
 			<h1>
-				Welcome to
+				Say Hello to
 				<img src="../image/common/logo_gate.svg" alt="Another Saigon by LG">
 			</h1>
 		</div>
-		<img src="../image/01_login/kv_gate_2_c.png" alt="Saigon's background" class="img_login_kv">
 		<div class="bottom_content gap">
-			<ul class="sns_login_a">
-				<li><a href="" class="sns_facebook"><img src="../image/01_login/logo_facebook.svg" alt="facebook logo"><span class="line"></span><span class="txt">Start with Facebook</span></a></li>
-				<li><a href="" class="sns_google"><img src="../image/01_login/logo_google.svg" alt="google logo"><span class="line"></span><span class="txt">Start with Google</span></a></li>
-				<li><a href="" class="sns_apple"><img src="../image/01_login/logo_apple.svg" alt="apple logo"><span class="line"></span><span class="txt">Start with Apple</span></a></li>
-				<li><a href="" class="sns_amazon"><img src="../image/01_login/logo_amazon.svg" alt="amazon logo"><span class="line"></span><span class="txt">Start with Amazon</span></a></li>
+			<div class="login_text">
+				<h2>Enjoy the Good Life Solution</h2>
+				<p>Connect to a better daily life where you can <br />
+					experience new taste of your dream</p>
+			</div>
+			<div class="login_chat"><p>간편하게 시작하기</p></div>
+			<ul class="sns_login_b">
+				<li><a href="" class="sns_facebook"><img src="../image/01_login/logo_facebook_w.svg" alt="facebook logo"></a></li>
+				<li><a href="" class="sns_google"><img src="../image/01_login/logo_google_w.svg" alt="google logo"></a></li>
+				<li><a href="" class="sns_apple"><img src="../image/01_login/logo_apple_w.svg" alt="apple logo"></a></li>
+				<li><a href="" class="sns_amazon"><img src="../image/01_login/logo_amazon_w.svg" alt="amazon logo"></a></li>
 			</ul>
 			<div class="link_wrap">
 				<button id="link_policy" class="line_link" onclick="popupOpen('pop_policy')">개인 정보 정책</button>
@@ -50,5 +56,6 @@
 			</div>
 		</div>
 	</div>
+	<!-- 관심사 선택 팝업이 컨펌 미확정 상태라 추후 제작 예정입니다. -->
 </body>
 </html>
