--- a/01_login/login_bg03.html
+++ b/01_login/login_bg03.html
@@ -12,7 +12,7 @@
 	<script src="../js/jquery-3.5.1.min.js"></script>
 	<script src="../js/script.js"></script>
 </head>
-<body class="login_b_page">
+<body class="login_b_page bg03">
 	<div class="container">
 		<header class="blank_bg">
 			<ul class="language">
