--- a/04_event/password_no.html
+++ b/04_event/password_no.html
@@ -6,22 +6,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
-	<link rel="stylesheet" href="../../css/common.css">
-	<link rel="stylesheet" href="../../css/utility.css">
-	<link rel="stylesheet" href="../../css/slick.css">
-	<link rel="stylesheet" href="../../css/slick-theme.css">
-	<link rel="stylesheet" href="../../css/swiper.css">
-	<link rel="stylesheet" href="../../css/components.css">
-	<link rel="stylesheet" href="../../css/style.css">
-	<script src="../../js/jquery-3.5.1.min.js"></script>
-	<script src="../../js/slick.js"></script>
-	<script src="../../js/swiper.js"></script>
-	<script src="../../js/script.js"></script>
+	<link rel="stylesheet" href="../css/common.css">
+	<link rel="stylesheet" href="../css/utility.css">
+	<link rel="stylesheet" href="../css/slick.css">
+	<link rel="stylesheet" href="../css/slick-theme.css">
+	<link rel="stylesheet" href="../css/swiper.css">
+	<link rel="stylesheet" href="../css/components.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<script src="../js/jquery-3.5.1.min.js"></script>
+	<script src="../js/slick.js"></script>
+	<script src="../js/swiper.js"></script>
+	<script src="../js/script.js"></script>
 </head>
 <body class="mission05_about">
 	<div class="container">
 		<header>
-			<h1><img src="../../image/common/logo.svg" alt="Another Saigon by LG"></h1>
+			<h1><img src="../image/common/logo.svg" alt="Another Saigon by LG"></h1>
 			<button onclick="history.go(-1)" class="btn_header_back">back</button>
 			<ul class="language">
 				<li class="current"><a href="javascript:void(0);">English</a></li>
@@ -31,17 +31,18 @@
 		<section class="password_sec gap">
 			<div class="worldcup_title">
 				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 SNS 업로드 확인 후<br />
-					미션 CLEAR를 위해 사용되는 기능입니다.</p>
+				<p>운영 스텝이 확인을 위해 <br />
+					사용되는 기능입니다.</p>
 			</div>
 			<form action="">
 				<!-- 제가 기본 틀만 잡았습니다. 비밀번호 한번에 삭제되는 기능, 모바일에서 빠르게 숫자 가려지는 기능은 구현 부탁드립니다. -->
-				<div class="password_wrap">
+				<div class="password_no password_wrap">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password1" id="m05_password_01">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password2" id="m05_password_02">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password3" id="m05_password_03">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password4" id="m05_password_04">
 				</div>
+				<p class="password_no_txt">*해당 기능은 운영 스텝만 사용 가능합니다.</p>
 			</form>
 		</section>
 	</div>
