--- a/04_event/password_ok.html
+++ b/04_event/password_ok.html
@@ -6,22 +6,22 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
-	<link rel="stylesheet" href="../../css/common.css">
-	<link rel="stylesheet" href="../../css/utility.css">
-	<link rel="stylesheet" href="../../css/slick.css">
-	<link rel="stylesheet" href="../../css/slick-theme.css">
-	<link rel="stylesheet" href="../../css/swiper.css">
-	<link rel="stylesheet" href="../../css/components.css">
-	<link rel="stylesheet" href="../../css/style.css">
-	<script src="../../js/jquery-3.5.1.min.js"></script>
-	<script src="../../js/slick.js"></script>
-	<script src="../../js/swiper.js"></script>
-	<script src="../../js/script.js"></script>
+	<link rel="stylesheet" href="../css/common.css">
+	<link rel="stylesheet" href="../css/utility.css">
+	<link rel="stylesheet" href="../css/slick.css">
+	<link rel="stylesheet" href="../css/slick-theme.css">
+	<link rel="stylesheet" href="../css/swiper.css">
+	<link rel="stylesheet" href="../css/components.css">
+	<link rel="stylesheet" href="../css/style.css">
+	<script src="../js/jquery-3.5.1.min.js"></script>
+	<script src="../js/slick.js"></script>
+	<script src="../js/swiper.js"></script>
+	<script src="../js/script.js"></script>
 </head>
 <body class="mission05_about">
 	<div class="container">
 		<header>
-			<h1><img src="../../image/common/logo.svg" alt="Another Saigon by LG"></h1>
+			<h1><img src="../image/common/logo.svg" alt="Another Saigon by LG"></h1>
 			<button onclick="history.go(-1)" class="btn_header_back">back</button>
 			<ul class="language">
 				<li class="current"><a href="javascript:void(0);">English</a></li>
@@ -31,8 +31,8 @@
 		<section class="password_sec gap">
 			<div class="worldcup_title">
 				<h2>운영 스텝 체크</h2>
-				<p>운영 스텝이 SNS 업로드 확인 후<br />
-					미션 CLEAR를 위해 사용되는 기능입니다.</p>
+				<p>운영 스텝이 확인을 위해 <br />
+					사용되는 기능입니다.</p>
 			</div>
 			<form action="">
 				<!-- 제가 기본 틀만 잡았습니다. 비밀번호 한번에 삭제되는 기능, 모바일에서 빠르게 숫자 가려지는 기능은 구현 부탁드립니다. -->
@@ -44,6 +44,20 @@
 				</div>
 			</form>
 		</section>
+		<!-- 월드컵 완료시 노출 팝업 -->
+		<div id="m05_scan_clear" class="popup_wrap blur_pop" style="display: flex;">
+			<div class="blur_bg"></div>
+			<div class="pop_content">
+				<div class="mission_clear"><img src="../image/common/icn_mission_s.svg" alt="">Clear!</div>
+				<p>어나더사이공 챌린지는 틱톡 온라인에서 진행 되며, <br />
+					추후 추첨을 통해 다양한 LG 가전제품 당첨의 기회도<br />
+					가져보세요.</p>
+				<div class="pop_bottom_btns">
+					<button onclick="popClose()" id="btn_m1_close" class="ok_circle btn_pop_circle">닫기</button>
+				</div>
+			</div>
+		</div>
+		<!-- 팝업 end -->
 	</div>
 	
 	<script>
