--- a/04_event/view_02.html
+++ b/04_event/view_02.html
@@ -4,7 +4,7 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 		<title>LG Another Saigon</title>
 		<link rel="stylesheet" href="../css/common.css">
 		<link rel="stylesheet" href="../css/utility.css">
@@ -39,7 +39,7 @@
 				</div>
 			</section>
 			<div class="bottom_wrap">
-				<button onclick="location.href='../05_survey/password.html'" id="event_go_link02" class="btn_event_bottom">운영스텝 체크</button>
+				<button onclick="location.href='./password.html'" id="event_go_link02" class="btn_event_bottom">운영스텝 체크</button>
 			</div>
 		</div>
 		
