--- a/05_survey/password_ok.html
+++ b/05_survey/password_ok.html
@@ -1,8 +1,10 @@
+<!-- 비밀번호는 5번째 미션 후 운영 스텝 체크, 서베이 완료 후 운영 스텝 체크, 이벤트 상세 내 운영 스텝 체크 각각 텍스트가 다릅니다.
+	비밀번호는 기본값 password.html, 완료시 노출 팝업 생기는 password_ok.html, 잘못 입력시 나오는 오류 페이지 password_no.html으로 분류했습니다. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/utility.css">
@@ -34,6 +36,7 @@
 				</p>
 			</div>
 			<form action="">
+				<!-- 제가 기본 틀만 잡았습니다. 비밀번호 한번에 삭제되는 기능, 모바일에서 빠르게 숫자 가려지는 기능은 구현 부탁드립니다. -->
 				<div class="password_wrap">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password1" id="m05_password_01">
 					<input type="password" inputmode="numeric" pattern="[0-9]*" maxlength='1' name="password2" id="m05_password_02">
