--- a/05_survey/survey04.html
+++ b/05_survey/survey04.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui, viewport-fit=cover, maximum-scale=1.0 user-scalable=no">
 	<title>LG Another Saigon</title>
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/utility.css">
@@ -138,9 +138,10 @@
 				<!-- question end -->
 				<!-- question end -->
 				<div class="survey_bottom_btns">
-					<!-- 모든 필수문항이 선택시 button에 active 클래스가 추가되면서 버튼이 바뀝니다. -->
+					<!-- 모든 필수문항이 선택시 button에 active 클래스가 추가되면서 버튼이 바뀝니다. 
+					팝업 스크립트 구현을 위해 버튼타입을 button으로 구현했습니다. -->
 					<!-- <button onclick="popupOpen('survey_clear')" id="btn_survey03_check" class="active chk_circle btn_pop_circle">완료</button> -->
-					<button type="button" onclick="popupOpen('survey_clear_pop')" id="btn_survey02_check" class="btn_next btn_pop_circle">다음 단계로</button>
+					<button type="button" onclick="popupOpen('survey_clear_pop')" id="btn_survey02_check" class="btn_next btn_pop_circle">미완료</button>
 				</div>
 			</form>
 		</section>
